top bar spacing fix

--- a/system/site/assets/css/global.css
+++ b/system/site/assets/css/global.css
@@ -431,7 +431,7 @@ h1 {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	padding: 5px 0;
+	padding: 2px 0;
 	box-sizing: border-box;
 	transition: opacity 500ms ease-in-out;
 }
@@ -582,7 +582,7 @@ h1 {
 
 	}
 
-.template-overview .meta a {
+.template-overview .meta .button + .button {
 	margin-left: 3px;
 }
 
